# EduLingo

./: .env.example  .gitignore  EduLingo_AI_PRD.md  EduLingo_AI_PRD_v2.md  README.md  docker-compose.yml  package.json
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 83048b3ef0fd_add_users_table.py  9a15d72f1d44_baseline.py  9bb788c7d177_content_module_tables.py  a5d3c8e91f02_add_profile_fields_to_users.py
backend/app/: container.py  main.py
backend/app/modules/auth/api/: dependencies.py  router.py  schemas.py
backend/app/modules/auth/application/: dto.py  ports.py
backend/app/modules/auth/domain/: entities.py  exceptions.py  value_objects.py
backend/app/modules/auth/infrastructure/: bcrypt_hasher.py  jwt_issuer.py
backend/app/modules/content/api/: admin_router.py  converters.py  learner_router.py  schemas.py
backend/app/modules/content/application/: body_builder.py  dto.py  ports.py
backend/app/shared/: config.py  db.py  errors.py  logging.py
backend/scripts/: seed_content.py
backend/seeds/content/: pieces.yaml
backend/tests/: conftest.py
backend/tests/e2e/: conftest.py  test_admin_content_crud.py  test_admin_content_generate.py  test_admin_content_media.py  test_admin_learner_flow.py  test_auth_routes.py  test_health.py  test_library_api.py  test_profile_routes.py
backend/tests/fakes/: auth.py
backend/tests/integration/: conftest.py  test_db_connection.py
backend/tests/integration/scripts/: conftest.py  test_seed_content.py
backend/tests/unit/shared/: test_errors.py
(+195 files in other folders)
